# pauliengine

./: .gitignore  CMakeLists.txt  PauliString.h  QubitHamiltonian.cpp  QubitHamiltonian.h  README.md  README.txt
src/: PauliString.h  QubitHamiltonian.cpp
